deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: myapp
              topologyKey: kubernetes.io/hostname

      containers:
        - name: myapp
          image: nginx:latest
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html

      volumes:
        - name: html
          configMap:
            name: myapp-html
